# fastsearch-mcp

./: .gitignore  ACKNOWLEDGMENTS.md  CHANGELOG.md  CITATION.cff  Cargo.toml  DEVELOPMENT.md  DXT_PACKAGING_GUIDE.md  INSTALL.md  LICENSE  MCP_ECOSYSTEM.md  PACKAGING.md  README.md  RELEASE_TEMPLATE.md  RELEASING.md  VIBECODER_MANIFESTO.md  WEB_API.md  build-installer.ps1  build.ps1  build_all.ps1  build_bridge.ps1  clean-config.json  create-installer.ps1  dxt.yaml  dxt_manifest.json  fastsearch-mcp.rar  launch_fastsearch_mcp.py  llm.txt  mcp.config.json  package.json  package.ps1  pyproject.toml  temp-Cargo.toml  test-release.ps1
.cursor/rules/: architecture-protection.mdc  documentation-standards.mdc  rust-standards.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: release-checklist.md
.github/workflows/: build-release.yml  build.yml  ci.yml  release.yml
bridge/: Cargo.toml  README.md  build.rs  resources.rc  standalone.Cargo.toml  temp.Cargo.toml
bridge/src/: fastmcp_server.rs  ipc_client.rs  ipc_client_new.rs  lib.rs  main.rs  mcp_bridge.rs  mcp_compat.rs  mcp_explore.rs  mcp_explorer.rs  types.rs  validation.rs
database/: Basic Memory Database Schema Analysis.md
docs/: API_REFERENCE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DUAL-PACKAGE-ARCHITECTURE.md  DXT_BUILDING_GUIDE.md  IMPLEMENTATION_STATUS_CRITICAL_ASSESSMENT.md  MAINTAINERS.md  PRODUCT_REQUIREMENTS.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TECHNICAL_ARCHITECTURE.md  VIBECODER_MANIFESTO.md  WIZFILE_COMPARISON.md
fastsearch_mcp/: __init__.py  __main__.py  decorators.py  mcp_server.py  pipe_client.py
fastsearch_mcp_bridge/: ARCHITECTURE.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  README.md  dxt.yaml  pyproject.toml  setup.py
fastsearch_mcp_bridge/src/fastsearch_mcp/: __init__.py  __main__.py  cli.py  ipc.py  logging_config.py  mcp_server.py  server.py
fastsearch_mcp_bridge/src/fastsearch_mcp/tools/: __init__.py  base.py  disk_analyzer.py  duplicate_finder.py  file_search.py  help.py  integrity_checker.py  ntfs.py  resource_monitor.py  service.py  service_manager.py
fastsearch_mcp_bridge/src/fastsearch_mcp/utils/: file_utils.py
fastsearch_mcp_bridge/tests/: test_service_manager.py
frontend/: Dockerfile  healthcheck.sh  index.html  nginx.conf  package-lock.json  package.json  script.js  styles.css
frontend/.cursor/rules/: frontend-standards.mdc
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: BasicVoiceControl.css  BasicVoiceControl.js  LogViewerModal.js  TopBar.js  VoiceControlSideTab.css  VoiceControlSideTab.js  VoiceSettings.css  VoiceSettings.js
frontend/src/components/auth/: EmailVerification.jsx  EnhancedAuth.jsx  PasswordReset.jsx  ProtectedRoute.js
frontend/src/components/book/: BookGenerator.jsx
frontend/src/components/chat/: PersonaChat.jsx
frontend/src/components/image/: ImageGenerator.jsx
frontend/src/components/movie/: MovieMaker.jsx
frontend/src/components/music/: MusicGenerator.jsx
frontend/src/components/settings/: Settings.jsx
frontend/src/components/video/: VideoGenerator.jsx
frontend/src/contexts/: AuthContext.js
frontend/src/pages/: AnalyticsPage.js  AudioStudioPage.js  BookMakerPage.js  ChatPage.js  CodeAssistantPage.js  ContentSafetyPage.js  DataInsightsPage.js  DocumentsPage.js  FuturePredictorPage.js  GalleryPage.js  GeneratePage.js  HelpPage.js  ImagesPage.js  LabPage.js  MovieMakerPage.js  MultimodalPage.js  MusicPage.js  SettingsPage.js  SettingsPage_enhanced.jsx  StyleTransferPage.js
frontend/src/services/: imageService.js  musicService.js  settingsService.js  settingsService_enhanced.js
installer/: README.md  build_installer.ps1  setup_service.ps1  uninstall_service.ps1
projects/: FastSearch MCP Server - Project Plan.md
scripts/: generate_docs.py  install.js  move_md_to_docs.ps1  test-cicd.ps1
service/: Cargo.toml
service/src/: fastsearch_service.rs  file_types.rs  lib.rs  main.rs  mcp_status.rs  ntfs_reader.rs  pipe_server.rs  search_engine.rs  web_api.rs
service/src/fastsearch_service/: cache_persistence.rs  file_types.rs  mcp_server.rs  mft_cache.rs  mft_cache_tests.rs  mod.rs  ntfs_reader.rs  search_engine.rs  usn_journal.rs  web_api.rs
shared/: Cargo.toml
shared/src/: lib.rs  types.rs
src/: lib.rs  main.rs  mcp_server.rs  ntfs_reader.rs
temp-bridge/: Cargo.toml
temp-build/: Cargo.toml
test_mods/: Cargo.toml  test_imports.rs
test_mods/src/: lib.rs  main.rs  mcp_server.rs  search_engine.rs
tests/: test_mcp_bridge.py
wix/: Bundle.wxs  FastSearchMCP.wixobj  Product.wxs  README.md  banner_instructions.txt  license.rtf  theme.xml
