[package]
name = "fastsearch"
version = "0.1.0"
edition = "2021"
description = "Lightning-fast file search using NTFS Master File Table"
authors = ["Sandra & Claudius"]
license = "MIT"
repository = "https://github.com/sandra-claudius/fastsearch-mcp"

[[bin]]
name = "fastsearch"
path = "src/main.rs"

[dependencies]
# Windows API access
winapi = { version = "0.3", features = ["winnt", "fileapi", "handleapi", "errhandlingapi"] }
# NTFS parsing - using proper ntfs crate for live MFT access
ntfs = { version = "0.4", features = ["time"] }
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Command line parsing
clap = { version = "4.0", features = ["derive"] }
# Logging
log = "0.4"
env_logger = "0.10"
# Error handling
anyhow = "1.0"
# String interning for memory efficiency
string-interner = "0.17"
# Fast hashing
ahash = "0.8"
# Memory-mapped files
memmap2 = "0.9"
# Pattern matching
regex = "1.10"
# File watching
notify = "6.1"
# Crossbeam for concurrent data structures
crossbeam = "0.8"
# Web API server dependencies
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true
