[workspace]
members = [
    "bridge",
    "service", 
    "shared"
, "temp-bridge"]
resolver = "2"

[workspace.dependencies]
# Common dependencies shared across workspace
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
bincode = "1.3"

# Package metadata
[package]
name = "fastsearch-mcp"
version = "0.1.0"  # Test release for CI/CD workflow
edition = "2021"
description = "Lightning-fast file search MCP server with privilege separation"
authors = ["Sandra & Claudius"]
license = "MIT"
repository = "https://github.com/sandraschipal/fastsearch-mcp"

# This creates a meta-package that builds all components
[dependencies]
fastsearch-shared = { path = "shared" }
fastsearch-mcp-bridge = { path = "bridge" }
fastsearch-service = { path = "service" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
