[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastsearch-mcp"
version = "0.1.0"
description = "FastSearch MCP - Lightning-fast file search for Claude Desktop"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/yourusername/fastsearch-mcp"
Documentation = "https://github.com/yourusername/fastsearch-mcp#readme"
Issues = "https://github.com/yourusername/fastsearch-mcp/issues"
Source = "https://github.com/yourusername/fastsearch-mcp"

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "types-python-dateutil>=2.8.0",
]

dxt = [
    "dxt>=0.1.0",
]

[project.scripts]
fastsearch-mcp = "fastsearch_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastsearch_mcp*"]

exclude = [
    "tests*",
    "examples*",
    "docs*",
    ".github*",
]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["pytest"]
ignore_missing_imports = true
