[package]
name = "fastsearch-mcp-bridge"
version = "1.0.0"
edition = "2021"
description = "MCP bridge for FastSearch NTFS file search service"
license = "MIT"
authors = ["Sandra <sandra@example.com>"]

[[bin]]
name = "fastsearch-mcp-bridge"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_System_Pipes",
    "Win32_Foundation", 
    "Win32_System_IO",
] }

[build-dependencies]
embed-resource = "2.4"
