[package]
name = "fastsearch-mcp-bridge"
version = "2.0.0"
edition = "2021"
description = "FastMCP 2.10 bridge for FastSearch NTFS file search service"
license = "MIT"
authors = ["Sandra & Claudius"]
repository = "https://github.com/sandraschi/fastsearch-mcp"
keywords = ["mcp", "fastsearch", "filesystem", "search"]
categories = ["filesystem", "api-bindings"]

[[bin]]
name = "fastsearch-mcp-bridge"
path = "src/main.rs"

[[bin]]
name = "mcp_explore"
path = "src/mcp_explore.rs"

[[bin]]
name = "mcp_explorer"
path = "src/mcp_explorer.rs"

[dependencies]
# Shared types with service
fastsearch-shared = { path = "../shared" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.0"
bincode = "1.3"
mcp-core = "0.1.50"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

# String handling
regex = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.0"

[features]
default = []

[build-dependencies]
embed-resource = "2.4"
