[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastsearch-mcp-bridge"
version = "0.1.0"
description = "FastSearch MCP Bridge - FastMCP 2.10 compliant server for FastSearch"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
    "python-jsonrpc-server>=0.4.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "isort>=5.0",
    "mypy>=0.9.0",
    "types-python-dateutil>=2.8.0",
]

[project.scripts]
fastsearch-mcp-bridge = "fastsearch_mcp.main:main"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
