[package]
name = "fastsearch-shared"
version = "0.1.0"
edition = "2021"
description = "Shared types between FastSearch bridge and service"
authors = ["Sandra & Claudius"]
license = "MIT"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Binary serialization for IPC
bincode = "1.3"
# Error handling
anyhow = "1.0"
# Time handling
chrono = { version = "0.4", features = ["serde"] }
