[package]
name = "fastsearch-shared"
version = "0.1.0"
edition = "2021"
description = "Shared types and utilities for FastSearch MCP bridge and service"
authors = ["Sandra & Claudius"]
license = "MIT"
repository = "https://github.com/sandraschi/fastsearch-mcp"
keywords = ["search", "mcp", "fastsearch", "filesystem"]
categories = ["filesystem", "search"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Binary serialization for IPC
bincode = "1.3"
# Error handling
anyhow = "1.0"
thiserror = "1.0"  # For better error handling
lazy_static = "1.4"  # For static initialization
log = "0.4"  # For consistent logging
# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
rstest = "0.18"  # For testing
assert-json-diff = "2.0"  # For JSON comparison in tests
